# rocket-jwt-auth

./: .gitignore  Cargo.toml  README.md
migrations/2018-09-18-082046_create_users/: up.sql
src/: db.rs  encrypt.rs  main.rs  models.rs  schema.rs  token.rs
